# ai-platform-kubernetes-aws

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  container.yml
app/: README.md
app/tests/: conftest.py  test_health.py  test_inference.py
architecture/: README.md
architecture/decisions/: 0001-use-amazon-eks.md  0002-separate-infrastructure-packaging-and-delivery.md  0003-use-pull-based-gitops.md  0004-use-alb-and-nginx-ingress.md  0005-use-external-secrets-with-irsa.md  0006-use-s3-native-terraform-state-locking.md  0007-use-cost-aware-multi-az-network.md  0008-use-managed-node-groups-for-the-baseline.md  0009-use-immutable-images-and-secret-scoped-irsa.md  0010-separate-platform-addons-from-application-workloads.md  0011-use-argocd-applications-for-platform-addons.md  0012-use-an-alb-to-nginx-bridge-ingress.md  0013-use-argocd-for-application-delivery.md  0014-use-github-actions-for-ci-and-image-delivery.md  0015-use-external-secrets-for-kubernetes-secret-projection.md  0016-use-kube-prometheus-stack-for-observability.md  0017-harden-grafana-and-alertmanager-boundaries.md  0018-use-cloudwatch-logs-for-container-log-shipping.md  README.md
architecture/diagrams/: delivery-flow.md  observability-flow.md  system-architecture.md
argocd/: README.md
argocd/applications/: README.md  ai-inference.yaml  platform-addons.yaml
argocd/platform-addons/: README.md  alb-to-nginx-bridge.yaml  external-secrets.yaml  (+6 more)
docs/: README.md  ci-cd.md  platform-addons.md
screenshots/: README.md
terraform/: README.md
(+104 files in other folders)
