[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "ai-platform-api"
version = "0.1.0"
description = "Minimal inference API for the AI platform on Amazon EKS"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "prometheus-client>=0.21,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app/src/ai_platform"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -q"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
